# imgcompresor-rust

./: .gitignore  Cargo.toml  README.md
src/: args.rs  compressor.rs  file_collector.rs  main.rs  stats.rs
